--- a/backend/llm-driven-booking/package.json
+++ b/backend/llm-driven-booking/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.18.2",
     "body-parser": "^1.20.2",
-    "better-sqlite3": "^8.5.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.2",
     "openai": "^4.0.0",
-    "dotenv": "^16.0.0"
+    "sqlite3": "^5.1.7"
   }
 }
