--- a/backend/llm-driven-booking/package.json
+++ b/backend/llm-driven-booking/package.json
@@ -2,6 +2,10 @@
   "name": "tiger-tix-llm-service",
   "version": "1.0.0",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.0",
@@ -10,3 +14,4 @@
     "sqlite3": "^5.1.7"
   }
 }
+
