--- a/backend/user-authentication/package.json
+++ b/backend/user-authentication/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "backend",
+  "name": "user-authentication",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test TEST_DB=true jest --runInBand --verbose"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "sqlite3": "^5.1.7"
-  },
-  "devDependencies": {
-    "jest": "^30.2.0"
   }
 }
