--- a/backend/user-authentication/package.json
+++ b/backend/user-authentication/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "NODE_ENV=test TEST_DB=true jest --runInBand --verbose"
   },
   "keywords": [],
