--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,26 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "TigerTix Backend - Microservices Orchestrator",
+  "main": "server.js",
   "scripts": {
+    "postinstall": "cd admin-service && npm install && cd ../client-service && npm install && cd ../user-authentication && npm install && cd ../llm-driven-booking && npm install",
+    "install:all": "npm install",
+    "start": "node server.js",
     "test": "NODE_ENV=test TEST_DB=true jest --runInBand --verbose"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^5.1.0",
+    "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.2",
+    "openai": "^4.0.0",
     "sqlite3": "^5.1.7",
     "supertest": "^7.1.4"
   },
